--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
             <version>5.4.0</version>
         </dependency>
         <dependency>
+            <groupId>net.ravendb</groupId>
+            <artifactId>ravendb-client</artifactId>
+            <version>4.0.0-rc1</version>
+        </dependency>
+        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>31.1-jre</version>
